# revmindaihomeassignment

./: .gitignore  README.md  requirements.txt
backend/: pyproject.toml  seed.py  test_groq.py
backend/app/: config.py  database.py  main.py
backend/app/api/: chat.py  products.py  summary.py  trends.py
backend/app/models/: sales.py
backend/app/services/: llm_service.py  query_service.py
frontend/: package-lock.json  package.json
frontend/frontend/: package-lock.json
frontend/frontend/app/: page.tsx
frontend/frontend/app/chat/: page.tsx
frontend/frontend/components/: KPICard.tsx  Navbar.tsx  RevenueChart.tsx
